- #1503 build failure with musl libc due to undefined GLOB_BRACE and GLOB_TILDE
        (thanks to Natanael Copa).
- #1508 Show command highlight configuration (thanks to Nicolas Appriou).
- #1511 sync init crashes if client certification file is empty or invalid
        (thanks to Marton Suranyi).
- TW-5 color.due.today does not work (thanks to Max Muller).
- TW-28 Inserts spaces before punctuation characters (thanks to Matt Kraai).
- TW-43 Better error handling than: "Found extra operands." (thanks to Benjamin
        Weber).
- TW-44 Space handling in dateformat (thanks to Louis-Claude Canon).
- TW-72 extend info report with urgency column.
- TW-99 info report streamlining.
- TW-101 New description column format: Truncated WITH annotation count (thanks
         to atomicules).
- TW-115 allow "0day" durations for UDAs.
- TW-128 new helper command; _envs.
- TW-168 modification of due date relative to current due date (thanks to Dirk
         Sarpe).
- TW-186 Increase for numerical UDAs (thanks to Steffen Uhlig).
- TW-193 Support listing breaks.
- TW-197 New virtual tag READY.
- TW-218 Reveal terms of urgency calculation for a given task (thanks to Max
         Muller).
- TW-221 Migrate task-faq man page to the Wiki.
- TW-230 Filter tasks on partial UUIDs (thanks to Paul Kishimoto).
- TW-242 extra Space when annotating a path/filename, taskopen can not open the
         file (thanks to Andreas Kalex).
- TW-244 task add "Description (Information)" results in
         "Description ( Information)".
- TW-249 Report filters don't allow parantheses (thanks to Philipp Woelfel).
- TW-250 Opening parenthesis in description gets padded in task 2.0.0 bet 2
         (thanks to Michelle Crane).
- TW-251 extra spaces added after ( and / (thanks to Andy Spiegl).
- TW-252 task done - Doesn't stop task before marking complete (thanks to
         Renato Alves).
- TW-253 Unrecognized taskwarrior file format. in